Config changes and fixes